# Rochdi

./: README.md  bashtest.py  pyproject.toml
src/: __init__.py  bash.py
